; ModuleID = '/home/carl/AnghaBench/mongoose/extr_mongoose.c_mg_resolve_async.c'
source_filename = "/home/carl/AnghaBench/mongoose/extr_mongoose.c_mg_resolve_async.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.mg_mgr = type { i32 }
%struct.mg_resolve_async_opts = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @mg_resolve_async(%struct.mg_mgr* %0, i8* %1, i32 %2, i32 %3, i8* %4) #0 {
  %6 = alloca %struct.mg_mgr*, align 8
  %7 = alloca i8*, align 8
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca i8*, align 8
  %11 = alloca %struct.mg_resolve_async_opts, align 4
  store %struct.mg_mgr* %0, %struct.mg_mgr** %6, align 8
  store i8* %1, i8** %7, align 8
  store i32 %2, i32* %8, align 4
  store i32 %3, i32* %9, align 4
  store i8* %4, i8** %10, align 8
  %12 = call i32 @memset(%struct.mg_resolve_async_opts* %11, i32 0, i32 4)
  %13 = load %struct.mg_mgr*, %struct.mg_mgr** %6, align 8
  %14 = load i8*, i8** %7, align 8
  %15 = load i32, i32* %8, align 4
  %16 = load i32, i32* %9, align 4
  %17 = load i8*, i8** %10, align 8
  %18 = getelementptr inbounds %struct.mg_resolve_async_opts, %struct.mg_resolve_async_opts* %11, i32 0, i32 0
  %19 = load i32, i32* %18, align 4
  %20 = call i32 @mg_resolve_async_opt(%struct.mg_mgr* %13, i8* %14, i32 %15, i32 %16, i8* %17, i32 %19)
  ret i32 %20
}

declare dso_local i32 @memset(%struct.mg_resolve_async_opts*, i32, i32) #1

declare dso_local i32 @mg_resolve_async_opt(%struct.mg_mgr*, i8*, i32, i32, i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
